catalog-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-backend-deployment
  labels:
    app: catalog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-backend
  template:
    metadata:
      labels:
        app: catalog-backend
    spec:
      containers:
      - name: catalog-backend
        image: chaphe/backend-catalog-image:1.0
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-backend-service
spec:
  #type: NodePort
  selector:
    app: catalog-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      #nodePort: 30300
