mongo-reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-reviews-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-reviews
  template:
    metadata:
      labels:
        app: mongo-reviews
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: initbd
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initbd
          configMap:
            name: config-reviews-initbd    
              
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-reviews-service
spec:
  type: ClusterIP
  selector:
    app: mongo-reviews
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
