mysql-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-catalog-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-catalog
  template:
    metadata:
      labels:
        app: mysql-catalog
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.27
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: initbd
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initbd
          configMap:
            name: config-mysql-initbd
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-catalog-service  
spec:
  type: ClusterIP
  selector:
    app: mysql-catalog
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
