reviews-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-frontend-deployment 
  labels:
    app: reviews-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-frontend
  template:
    metadata:
      labels:
        app: reviews-frontend
    spec:
      containers:
      - name: reviews-frontend
        image: chaphe/frontend-reviews-image:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-frontend-service
spec:
  #type: NodePort
  selector:
    app: reviews-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30201
