ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /reviews-frontend
        pathType: Prefix
        backend:
          service:
            name: reviews-frontend-service
            port:
              number: 80
      - path: /reviews-backend
        pathType: Prefix
        backend:
          service:
            name: reviews-backend-service
            port:
              number: 3000
      - path: /store-frontend
        pathType: Prefix
        backend:
          service:
            name: store-frontend-service
            port:
              number: 80
      - path: /store-backend
        pathType: Prefix
        backend:
          service:
            name: store-backend-service
            port:
              number: 8082
      - path: /catalog-backend
        pathType: Prefix
        backend:
          service:
            name: catalog-backend-service
            port:
              number: 8081
      - path: /catalog-frontend
        pathType: Prefix
        backend:
          service:
            name: catalog-frontend-service
            port:
              number: 80
